tests/ui/compile-fail/section-in-async-block.stderr
error: section cannot be described at here
 --> $DIR/section-in-async-block.rs:6:9
  |
6 | /         section!("section", {
7 | |             assert!(true);
8 | |         });
  | |__________^
